--- a/translations/kangyur/translations/100-018_toh862-the_essential_dharani_of_the_tathagata_bhaisajyaguru.xml
+++ b/translations/kangyur/translations/100-018_toh862-the_essential_dharani_of_the_tathagata_bhaisajyaguru.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?xml-model href="../../../schema/current/translation.rng" schematypens="http://relaxng.org/ns/structure/1.0"?>
-<TEI xmlns="http://www.tei-c.org/ns/1.0">
+<tei:TEI xmlns="http://www.tei-c.org/ns/1.0" xmlns:tei="http://www.tei-c.org/ns/1.0">
     <teiHeader>
         <fileDesc>
             <titleStmt>
@@ -18,7 +18,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-100-018-90">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.0 <date>2024</date>
+                <edition>v 1.0.1 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -143,6 +143,9 @@
                 <change who="#martina-cotter" when="2024-12-02T14:08:44.316Z" type="text-version" status="1.0.0" xml:id="UT22084-100-018-93">
                     <desc>First published version.</desc>
                 </change>
+                <change who="#andre" when="2024-12-03T20:02:11.138Z" type="text-version" status="1.0.1" xml:id="UT22084-100-018-94">
+                    <desc>Glossary integration revised, activated in CG</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
     </teiHeader>
@@ -152,13 +155,13 @@
                     Outline to the text is quite complex, it is recommended that you paste the outlined contents from the DOCX here as a comment for
                     markup's reference. The actual table of contents will be generated in the Reading Room by the parser.-->
         <front>
-            <div type="summary" xml:id="UT22084-100-018-summary">
+            <tei:div type="summary" xml:id="UT22084-100-018-summary">
                 <head type="summary" tid="1">Summary</head>
                 <milestone unit="chunk" xml:id="UT22084-100-018-29"/>
                 <p tid="2">This very short text gives the Essence Dhāraṇī of the Medicine Buddha,
                     Bhaiṣajya­guru­vaiḍūrya­prabha­rāja.</p>
-            </div>
-            <div type="acknowledgment" xml:id="UT22084-100-018-acknowledgment">
+            </tei:div>
+            <tei:div type="acknowledgment" xml:id="UT22084-100-018-acknowledgment">
                 <head type="acknowledgment" tid="3">Acknowledgements</head>
                 <milestone unit="chunk" xml:id="UT22084-100-018-30"/>
                 <p tid="4">This publication was completed under the patronage and supervision of
@@ -168,10 +171,10 @@
                     team. Catherine Dalton produced the translation and wrote the introduction. Ryan
                     Damron edited the translation and the introduction, and Dawn Collins copyedited
                     the text. Martina Cotter was in charge of the digital publication process.</p>
-            </div>
-            <div type="introduction" xml:id="UT22084-100-018-introduction">
+            </tei:div>
+            <tei:div type="introduction" xml:id="UT22084-100-018-introduction">
                 <head type="introduction" tid="7">Introduction</head>
-                <div type="section" xml:id="UT22084-100-018-introduction-1">
+                <tei:div type="section" xml:id="UT22084-100-018-introduction-1">
                     <milestone unit="chunk" xml:id="UT22084-100-018-33"/>
                     <p tid="8">This very short dhāraṇī text contains only an homage to the Medicine
                         Buddha Bhaiṣajyaguruvaiḍūryaprabha followed by his essence dhāraṇī (<foreign xml:lang="Bo-Ltn" type="term">snying po’i gzungs</foreign>). The dhāraṇī
@@ -257,16 +260,16 @@
                                 viewer in this translation.</p>
                         </note> The text is stable across all
                         recensions consulted. </p>
-                </div>
-            </div>
+                </tei:div>
+            </tei:div>
         </front>
         <body>
-            <div type="translation" xml:id="UT22084-100-018-translation">
+            <tei:div type="translation" xml:id="UT22084-100-018-translation">
                 <head type="translation">The Translation</head>
                 <head type="titleMain" tid="13">The Essence Dhāraṇī of the Tathāgata
                     Bhaiṣajyaguru</head>
                 <head type="titleMain" tid="14"/>
-                <div type="section" xml:id="UT22084-100-018-section-1">
+                <tei:div type="section" xml:id="UT22084-100-018-section-1">
                     <milestone unit="chunk" xml:id="UT22084-100-018-42"/>
                     <p tid="17">
                         <ref cRef="F.87.a" type="folio" xml:id="UT22084-100-018-63"/> Homage
@@ -280,16 +283,16 @@
                     <milestone unit="chunk" xml:id="UT22084-100-018-45"/>
                     <trailer tid="20">This completes “<title xml:lang="en">The Essence Dhāraṇī of
                             the Tathāgata Bhaiṣajyaguru</title>.”</trailer>
-                </div>
-            </div>
+                </tei:div>
+            </tei:div>
         </body>
         <back>
-            <div type="notes" xml:id="UT22084-100-018-notes">
+            <tei:div type="notes" xml:id="UT22084-100-018-notes">
                 <head type="notes" tid="21">Notes</head>
-            </div>
-            <div type="listBibl" xml:id="UT22084-100-018-listBibl">
+            </tei:div>
+            <tei:div type="listBibl" xml:id="UT22084-100-018-listBibl">
                 <head type="listBibl" tid="25">Bibliography</head>
-                <div type="section" xml:id="UT22084-100-018-listBibl-1">
+                <tei:div type="section" xml:id="UT22084-100-018-listBibl-1">
                     <head type="section" tid="26">Tibetan Sources</head>
                     <bibl xml:id="UT22084-100-018-46">
                         <title xml:lang="Bo-Ltn">de bzhin gshegs pa
@@ -303,8 +306,8 @@
                         of the China Tibetology Research Secondary Sources Center). 108 volumes.
                         Beijing: krung go’i bod rig pa dpe skrun khang (China Tibetology Publishing
                         House), 2006–9, vol. 97, pp. 239–40.</bibl>
-                </div>
-                <div type="section" xml:id="UT22084-100-018-listBibl-2">
+                </tei:div>
+                <tei:div type="section" xml:id="UT22084-100-018-listBibl-2">
                     <head type="section" tid="27">Secondary Sources</head>
                     <bibl xml:id="UT22084-100-018-49">Dalton, Jacob P. “How Dhāraṇīs WERE
                         Proto-Tantric: Liturgies, Ritual Manuals, and the Origins of the Tantras.”
@@ -330,9 +333,9 @@
                             Catalogue of the Tibetan Manuscripts and Block Prints in the Library of
                             the Hungarian Academy of Sciences</title>. Budapest: Library of the
                         Hungarian Academy of Sciences, 2010.</bibl>
-                </div>
-            </div>
-            <div type="glossary" status="excluded" xml:id="UT22084-100-018-glossary">
+                </tei:div>
+            </tei:div>
+            <tei:div type="glossary" xml:id="UT22084-100-018-glossary">
                 <list type="glossary">
                     <item>
                         <gloss type="person" xml:id="UT22084-100-018-58">
@@ -433,7 +436,7 @@
                         </gloss>
                     </item>
                 </list>
-            </div>
+            </tei:div>
         </back>
     </text>
-</TEI>
+</tei:TEI>
