--- a/translations/kangyur/translations/091-009_toh612,923-the_dharani_of_the_armlet_atop_the_standard.xml
+++ b/translations/kangyur/translations/091-009_toh612,923-the_dharani_of_the_armlet_atop_the_standard.xml
@@ -30,7 +30,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-091-009-158">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.0 <date>2024</date>
+                <edition>v 1.0.1 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -172,6 +172,9 @@
                 <change who="#martina-cotter" when="2024-12-02T14:06:35.026Z" type="text-version" status="1.0.0" xml:id="UT22084-091-009-162">
                     <desc>First published version.</desc>
                 </change>
+                <change who="#andre" when="2024-12-03T20:11:31.946Z" type="text-version" status="1.0.1" xml:id="UT22084-091-009-163">
+                    <desc>Glossary integration revised, activated in CG</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
     </teiHeader>
@@ -180,7 +183,7 @@
                     Outline to the text is quite complex, it is recommended that you paste the outlined contents from the DOCX here as a comment for
                     markup's reference. The actual table of contents will be generated in the Reading Room by the parser.-->
         <front>
-            <div type="summary" xml:id="UT22084-091-009-summary">
+            <tei:div xmlns:tei="http://www.tei-c.org/ns/1.0" type="summary" xml:id="UT22084-091-009-summary">
                 <head type="summary" tid="1">Summary</head>
                 <milestone unit="chunk" xml:id="UT22084-091-009-72"/>
                 <p tid="2">
@@ -195,8 +198,8 @@
                     deity Dhvajāgrakeyūrā, who will always be with them, eliminating fear, affording
                     protection, and granting all good things such as good reputation and
                     abundance.</p>
-            </div>
-            <div type="acknowledgment" xml:id="UT22084-091-009-acknowledgment">
+            </tei:div>
+            <tei:div xmlns:tei="http://www.tei-c.org/ns/1.0" type="acknowledgment" xml:id="UT22084-091-009-acknowledgment">
                 <head type="acknowledgment" tid="3">Acknowledgements</head>
                 <milestone unit="chunk" xml:id="UT22084-091-009-73"/>
                 <p tid="4">This dhāraṇī was translated by Gyurme Avertin. Kedar and Rubi Prado
@@ -208,10 +211,10 @@
                     84000: Translating the Words of the Buddha. Rory Lindsay edited the translation
                     and the introduction, and Dawn Collins copyedited the text. Martina Cotter was
                     in charge of the digital publication process.</p>
-            </div>
-            <div type="introduction" xml:id="UT22084-091-009-introduction">
+            </tei:div>
+            <tei:div xmlns:tei="http://www.tei-c.org/ns/1.0" type="introduction" xml:id="UT22084-091-009-introduction">
                 <head type="introduction" tid="7">Introduction</head>
-                <div type="section" xml:id="UT22084-091-009-introduction-1">
+                <tei:div type="section" xml:id="UT22084-091-009-introduction-1">
                     <milestone unit="chunk" xml:id="UT22084-091-009-76"/>
                     <p tid="9">
                         <title xml:lang="en">The Dhāraṇī of Dhvajāgrakeyūrā</title> takes
@@ -305,15 +308,15 @@
                         transcription of dhāraṇīs across recensions of the Kangyur, and only minor
                         changes have been made to reconcile them or to emend the dhāraṇī based on
                         Sanskrit conventions. </p>
-                </div>
-            </div>
+                </tei:div>
+            </tei:div>
         </front>
         <body>
-            <div type="translation" xml:id="UT22084-091-009-translation">
+            <tei:div xmlns:tei="http://www.tei-c.org/ns/1.0" type="translation" xml:id="UT22084-091-009-translation">
                 <head type="translation">The Translation</head>
                 <head type="titleHon" tid="14">The Noble Dhāraṇī of</head>
                 <head type="titleMain" tid="15">Dhvajāgrakeyūrā</head>
-                <div type="section" xml:id="UT22084-091-009-section-1">
+                <tei:div type="section" xml:id="UT22084-091-009-section-1">
                     <milestone unit="chunk" xml:id="UT22084-091-009-88"/>
                     <p tid="18">
                         <ref cRef="F.45.b" type="folio" key="toh612" xml:id="UT22084-091-009-134"/>
@@ -435,23 +438,23 @@
                     <trailer tid="27">
                         <title xml:lang="en">The Noble Dhāraṇī of Dhvajāgrakeyūrā
                         </title> is complete.</trailer>
-                </div>
-                <div type="colophon" xml:id="UT22084-091-009-colophon">
+                </tei:div>
+                <tei:div type="colophon" xml:id="UT22084-091-009-colophon">
                     <head type="colophon" tid="28">Colophon</head>
                     <milestone unit="chunk" xml:id="UT22084-091-009-106"/>
                     <p tid="29">This translation was produced by the Indian preceptors Jinamitra and
                         Dānaśīla and the translator-editor Bandé Yeshé Dé. It was revised according
                         to the new lexicon and finalized.</p>
-                </div>
-            </div>
+                </tei:div>
+            </tei:div>
         </body>
         <back>
-            <div type="notes" xml:id="UT22084-091-009-notes">
+            <tei:div xmlns:tei="http://www.tei-c.org/ns/1.0" type="notes" xml:id="UT22084-091-009-notes">
                 <head type="notes" tid="30">Notes</head>
-            </div>
-            <div type="listBibl" xml:id="UT22084-091-009-listBibl">
+            </tei:div>
+            <tei:div xmlns:tei="http://www.tei-c.org/ns/1.0" type="listBibl" xml:id="UT22084-091-009-listBibl">
                 <head type="listBibl" tid="32">Bibliography</head>
-                <div type="section" xml:id="UT22084-091-009-listBibl-1">
+                <tei:div type="section" xml:id="UT22084-091-009-listBibl-1">
                     <head type="section" tid="34">Primary Sources</head>
                     <bibl xml:id="UT22084-091-009-107">
                         <title xml:lang="Bo-Ltn">rgyal mtshan rtse
@@ -491,8 +494,8 @@
                         <title xml:lang="Zh-Ltn">Sheng chuang bi yin
                             tuoluoni jing</title>
                         <title xml:lang="zh">勝幢臂印陀羅尼經</title> (<title xml:lang="Sa-Ltn">Dhva­jāgrakeyūrā­dhāraṇī</title>), Taishō 1363 (<ref target="https://cbetaonline.dila.edu.tw/en/T1363">CBETA</ref>; <ref target="https://21dzk.l.u-tokyo.ac.jp/SAT2018/T1363.html">SAT</ref>).</bibl>
-                </div>
-                <div type="section" xml:id="UT22084-091-009-listBibl-2">
+                </tei:div>
+                <tei:div type="section" xml:id="UT22084-091-009-listBibl-2">
                     <head type="section" tid="35">Secondary Literature</head>
                     <bibl xml:id="UT22084-091-009-113">Phangthangma (<title xml:lang="Bo-Ltn">dkar
                             chag ’phang thang ma</title>). Beijing: mi rigs dpe skrun khang,
@@ -507,9 +510,9 @@
                     <bibl xml:id="UT22084-091-009-116">Monier-Williams, Monier. <title xml:lang="en">A Sanskrit-English Dictionary: Etymologically and Philologically
                             Arranged with Special Reference to Cognate Indo-European
                             Languages</title>. Delhi: Motilal Banarsidass, 2005.</bibl>
-                </div>
-            </div>
-            <div type="glossary" status="excluded" xml:id="UT22084-091-009-glossary">
+                </tei:div>
+            </tei:div>
+            <tei:div xmlns:tei="http://www.tei-c.org/ns/1.0" type="glossary" xml:id="UT22084-091-009-glossary">
                 <list type="glossary">
                     <item>
                         <gloss type="term" xml:id="UT22084-091-009-118">
@@ -646,7 +649,7 @@
                         </gloss>
                     </item>
                 </list>
-            </div>
+            </tei:div>
         </back>
     </text>
 </TEI>
