--- a/translations/kangyur/translations/072-013_toh313,617,974-auspicious_night.xml
+++ b/translations/kangyur/translations/072-013_toh313,617,974-auspicious_night.xml
@@ -30,7 +30,7 @@
                 <editor role="TEImarkupEditor" xml:id="UT22084-072-013-331">Martina Cotter</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.15 <date>2024</date>
+                <edition>v 1.0.16 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -221,6 +221,9 @@
                 <change who="#celso" when="2024-10-15T16:38:05.513Z" type="text-version" status="1.0.15" xml:id="UT22084-072-013-383">
                     <desc>Corrected typo in bibliography</desc>
                 </change>
+                <change who="#martina-cotter" when="2024-12-03T21:20:10.371Z" type="text-version" status="1.0.16" xml:id="UT22084-072-013-384">
+                    <desc>updated typo.</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
     </teiHeader>
@@ -307,7 +310,7 @@
                             (<foreign xml:lang="Bo-Ltn">mdo sde</foreign>), Tantra (<foreign xml:lang="Bo-Ltn">rgyud</foreign>), and Dhāraṇī (<foreign xml:lang="Bo-Ltn">gzungs</foreign>) sections. The Peking Kangyur includes two recensions of the sūtra—one in its Sūtra
                         section and one in its Tantra section—whereas the Thempangma (<foreign xml:lang="Bo-Ltn">them spangs ma</foreign>) Kangyurs
                         classify <title xml:lang="en">Auspicious Night</title> exclusively as a tantra. Two of the three recensions preserved in the
-                        Degé Kangyur (Toh 612 and Toh 974) attribute its translation to a team consisting of two Indian preceptors, Jinamitra and
+                        Degé Kangyur (Toh 617 and Toh 974) attribute its translation to a team consisting of two Indian preceptors, Jinamitra and
                         Dānaśīla, and the Tibetan translator Yeshé Dé. The recension of the text in the Sūtra section (Toh 313) does not include a
                         colophon naming the translators, but it appears to be the work of the same team. This attribution, as well as the fact that
                             <title xml:lang="en">Auspicious Night</title> is recorded in two imperial period catalogs—the <title xml:lang="en">Denkarma</title> and <title xml:lang="en">Phangthangma</title>—indicate that the Tibetan translation was completed no
