--- a/translations/kangyur/placeholders/043-003_toh66-the_teaching_of_the_great_magical_display.xml
+++ b/translations/kangyur/placeholders/043-003_toh66-the_teaching_of_the_great_magical_display.xml
@@ -15,11 +15,11 @@
                 <sponsor xml:id="UT22084-043-003-3">Lee Boon Hwa Kelvin, Doris Lim, Chang Chen Hsien, Lim Cheng Cheng, all sentient beings</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.12 <date>2023</date>
+                <edition>v 0.0.13 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.h"/>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-043-003"/>
                 <date/>
             </publicationStmt>
@@ -76,6 +76,12 @@
                     <desc>2.h</desc>
                 </change>
                 <change who="#line-tofte" when="2023-11-06T16:09:24.507Z" type="text-version" status="0.0.12" xml:id="UT22084-043-003-17">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-12-04T15:39:31.374Z" type="translation-status" status="2.f" xml:id="UT22084-043-003-18">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2024-12-04T15:39:31.374Z" type="text-version" status="0.0.13" xml:id="UT22084-043-003-19">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
