--- a/translations/kangyur/placeholders/043-001_toh64-the_sutra_of_vidyutpraptas_questions.xml
+++ b/translations/kangyur/placeholders/043-001_toh64-the_sutra_of_vidyutpraptas_questions.xml
@@ -14,14 +14,16 @@
                 <author role="translatorEng" xml:id="UT22084-043-001-2">Robert Kritzer</author>
                 <editor role="projectEditor" xml:id="UT22084-043-001-18">Rory Lindsay</editor>
                 <editor role="copyEditor" xml:id="UT22084-043-001-27">Konchog Norbu</editor>
+                <editor role="projectEditor" xml:id="UT22084-043-001-39">Nathaniel Rich</editor>
+                <editor role="TEImarkupEditor" xml:id="UT22084-043-001-46">Martina Cotter</editor>
                 <sponsor xml:id="UT22084-043-001-12">Anonymous</sponsor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.16 <date>2024</date>
+                <edition>v 0.0.19 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.b"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-043-001"/>
                 <date/>
             </publicationStmt>
@@ -108,6 +110,18 @@
                     <desc>2.b</desc>
                 </change>
                 <change who="#line-tofte" when="2024-11-28T15:43:46.418Z" type="text-version" status="0.0.16" xml:id="UT22084-043-001-34">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-28T15:44:20.874Z" type="text-version" status="0.0.17" xml:id="UT22084-043-001-40">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-12-04T16:36:10.701Z" type="text-version" status="0.0.18" xml:id="UT22084-043-001-47">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-12-04T16:36:57.519Z" type="translation-status" status="2.a" xml:id="UT22084-043-001-48">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2024-12-04T16:36:57.519Z" type="text-version" status="0.0.19" xml:id="UT22084-043-001-49">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
