--- a/translations/kangyur/placeholders/081-003_toh434-the_secret_acalatantra.xml
+++ b/translations/kangyur/placeholders/081-003_toh434-the_secret_acalatantra.xml
@@ -10,8 +10,12 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa mi g.yo ba'i gsang rgyud chen po/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Āryācalamahāguhyatantra</title>
             </titleStmt>
+            <editionStmt>
+                <edition>v 0.0.1 <date>2024</date>
+                </edition>
+            </editionStmt>
             <publicationStmt>
-                <availability status=""/>
+                <availability status="3"/>
                 <idno xml:id="UT22084-081-003"/>
             </publicationStmt>
             <sourceDesc>
@@ -30,6 +34,12 @@
             
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-081-003-1">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-12-05T09:30:10.387Z" type="translation-status" status="3" xml:id="UT22084-081-003-2">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2024-12-05T09:30:10.387Z" type="text-version" status="0.0.1" xml:id="UT22084-081-003-3">
+                    <desc>User set version to 0.0.1</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
