--- a/translations/kangyur/placeholders/091-030_toh633,924-the_incantation_known_as_golden.xml
+++ b/translations/kangyur/placeholders/091-030_toh633,924-the_incantation_known_as_golden.xml
@@ -9,15 +9,13 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">gser can zhes bya ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Āryakāñcavatīnāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa gser can zhes bya ba'i gzungs/</title>
-                <author role="translatorMain" xml:id="UT22084-091-030-6">Patrick Lambelet</author>
-                <author role="translatorEng" xml:id="UT22084-091-030-7">Patrick Lambelet</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2024</date>
+                <edition>v 0.0.8 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status=""/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-091-030"/>
                 <date/>
             </publicationStmt>
@@ -68,6 +66,15 @@
                     <desc/>
                 </change>
                 <change who="#line-tofte" when="2024-11-05T11:24:23.659Z" type="text-version" status="0.0.6" xml:id="UT22084-091-030-11">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-05T11:25:00.607Z" type="text-version" status="0.0.7" xml:id="UT22084-091-030-12">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-12-05T09:53:17.855Z" type="translation-status" status="2.h" xml:id="UT22084-091-030-13">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-12-05T09:53:17.855Z" type="text-version" status="0.0.8" xml:id="UT22084-091-030-14">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
