--- a/translations/kangyur/translations/100-018_toh862-the_essential_dharani_of_the_tathagata_bhaisajyaguru.xml
+++ b/translations/kangyur/translations/100-018_toh862-the_essential_dharani_of_the_tathagata_bhaisajyaguru.xml
@@ -18,7 +18,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-100-018-90">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.1 <date>2024</date>
+                <edition>v 1.0.2 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -27,14 +27,6 @@
                     non-profit initiative to translate all the Buddha’s words into modern languages,
                     and to make them available to everyone. </publisher>
                 <availability status="1.a">
-                    <p type="tantricRestriction">
-                        <emph rend="bold">Warning:</emph> Readers are
-                        reminded that according to Vajrayāna Buddhist tradition there are
-                        restrictions and commitments concerning tantra. Practitioners who are not
-                        sure if they should read this translation are advised to consult the
-                        authorities of their lineage. The responsibility for reading this text or
-                        sharing it with others who may or may not fulfill the requirements lies in
-                        the hands of readers.</p>
                     <licence>
                         <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
                         <p>This work is provided under the protection of a Creative Commons CC
@@ -145,6 +137,9 @@
                 </change>
                 <change who="#andre" when="2024-12-03T20:02:11.138Z" type="text-version" status="1.0.1" xml:id="UT22084-100-018-94">
                     <desc>Glossary integration revised, activated in CG</desc>
+                </change>
+                <change who="#martina-cotter" when="2024-12-05T11:32:59.436Z" type="text-version" status="1.0.2" xml:id="UT22084-100-018-95">
+                    <desc>removed tantra warning from text.</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
