--- a/translations/kangyur/placeholders/062-009_toh209-the_sutra_proclaiming_the_lions_roar.xml
+++ b/translations/kangyur/placeholders/062-009_toh209-the_sutra_proclaiming_the_lions_roar.xml
@@ -18,12 +18,12 @@
                 <editor role="projectEditor" xml:id="UT22084-062-009-26">George FitzHerbert</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.8 <date>2024</date>
+                <edition>v 0.0.9 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.f"/>
+                <availability status="2.e"/>
                 <idno xml:id="UT22084-062-009"/>
                 <date/>
             </publicationStmt>
@@ -71,6 +71,12 @@
                     <desc>2.f</desc>
                 </change>
                 <change who="#line-tofte" when="2024-10-07T09:15:25.01Z" type="text-version" status="0.0.8" xml:id="UT22084-062-009-29">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-12-05T12:52:07.722Z" type="translation-status" status="2.e" xml:id="UT22084-062-009-30">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2024-12-05T12:52:07.722Z" type="text-version" status="0.0.9" xml:id="UT22084-062-009-31">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
