--- a/translations/kangyur/placeholders/096-070_toh821,1104-the_verses_of_auspiciousness_for_the_seven_successive_past_buddhas.xml
+++ b/translations/kangyur/placeholders/096-070_toh821,1104-the_verses_of_auspiciousness_for_the_seven_successive_past_buddhas.xml
@@ -9,11 +9,11 @@
                 <author role="translatorEng" xml:id="UT22084-096-070-9">Paul G. Hackett</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2024</date>
+                <edition>v 0.0.4 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-096-070"/>
             </publicationStmt>
             <sourceDesc>
@@ -67,6 +67,12 @@
                 </change>
                 <change who="#sameer" when="2024-07-08T07:12:25.216Z" type="text-version" status="0.0.3" xml:id="UT22084-096-070-11">
                     <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-12-05T13:57:55.76Z" type="translation-status" status="2.h" xml:id="UT22084-096-070-12">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-12-05T13:57:55.76Z" type="text-version" status="0.0.4" xml:id="UT22084-096-070-13">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
