--- a/translations/kangyur/placeholders/083-015_toh467-the_tantra_of_black_yamari.xml
+++ b/translations/kangyur/placeholders/083-015_toh467-the_tantra_of_black_yamari.xml
@@ -15,12 +15,12 @@
                 <editor role="copyEditor" xml:id="UT22084-083-015-27">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.14 <date>2024</date>
+                <edition>v 0.0.15 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.c"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-083-015"/>
                 <date/>
             </publicationStmt>
@@ -104,6 +104,12 @@
                     <desc>2.c</desc>
                 </change>
                 <change who="#line-tofte" when="2024-10-30T14:23:26.997Z" type="text-version" status="0.0.14" xml:id="UT22084-083-015-32">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-12-10T15:26:12.299Z" type="translation-status" status="2.a" xml:id="UT22084-083-015-33">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2024-12-10T15:26:12.299Z" type="text-version" status="0.0.15" xml:id="UT22084-083-015-34">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
