--- a/translations/kangyur/placeholders/003-006_toh1-11-chapter_11_on_a_group_of_troublesome_monks.xml
+++ b/translations/kangyur/placeholders/003-006_toh1-11-chapter_11_on_a_group_of_troublesome_monks.xml
@@ -11,11 +11,11 @@
                 <author role="translatorEng" xml:id="UT22084-003-006-2">Susan Roach</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2024</date>
+                <edition>v 0.0.6 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.h"/>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-003-006"/>
                 <date/>
             </publicationStmt>
@@ -51,6 +51,12 @@
                     <desc>2.h</desc>
                 </change>
                 <change who="#line-tofte" when="2024-02-07T14:36:23.599Z" type="text-version" status="0.0.5" xml:id="UT22084-003-006-9">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-12-11T14:12:28.191Z" type="translation-status" status="2.g" xml:id="UT22084-003-006-10">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2024-12-11T14:12:28.191Z" type="text-version" status="0.0.6" xml:id="UT22084-003-006-11">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
