--- a/translations/kangyur/placeholders/079-015_toh388-the_tantra_of_body_speech_and_mind.xml
+++ b/translations/kangyur/placeholders/079-015_toh388-the_tantra_of_body_speech_and_mind.xml
@@ -11,11 +11,11 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">Śrīkāyavākcittatantrarāja</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2024</date>
+                <edition>v 0.0.2 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="4"/>
+                <availability status="3"/>
                 <idno xml:id="UT22084-079-015"/>
             </publicationStmt>
             <sourceDesc>
@@ -40,6 +40,12 @@
                 </change>
                 <change who="#line-tofte" when="2024-12-02T13:08:04.518Z" type="text-version" status="0.0.1" xml:id="UT22084-079-015-3">
                     <desc>User set version to 0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2024-12-12T10:27:07.164Z" type="translation-status" status="3" xml:id="UT22084-079-015-4">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2024-12-12T10:27:07.164Z" type="text-version" status="0.0.2" xml:id="UT22084-079-015-5">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
