--- a/translations/kangyur/placeholders/046-004_toh98,721-the_sutra_teaching_the_array_of_the_buddhafields.xml
+++ b/translations/kangyur/placeholders/046-004_toh98,721-the_sutra_teaching_the_array_of_the_buddhafields.xml
@@ -7,22 +7,23 @@
                 <title type="mainTitle" xml:lang="en">The Sūtra Teaching the Array of the Buddhafields</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">Buddhakṣetravyūhanirdeśasūtra</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">sangs rgyas kyi zhing gi bkod pa'i mdo/</title>
-                <title type="mainTitle" xml:lang="zh">《說示佛國土莊嚴經》(大正藏:《佛說莊嚴王陀羅尼咒經》)</title>
+                <title type="otherTitle" xml:lang="zh">《說示佛國土莊嚴經》(大正藏:《佛說莊嚴王陀羅尼咒經》)</title>
                 <title type="otherTitle" xml:lang="en">The Sūtra, The Array of the Buddhafields</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Āryasarva­tathāgatādhiṣṭhānasattvāvalokena buddhakṣetravyūha­nirdeśa­nāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Āryasarvatathāgatādhiṣṭhāna­sattvāvalokena buddhakṣetra­nirdeśanavyūha­nāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Sarvatathāgatādhiṣṭhāna­sattvāvalokena buddha­kṣetranirdeśanavyūha­mahāyānasūtra</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa de bzhin gshegs pa thams cad kyi byin gyi rlabs sems can la gzigs shing sangs rgyas kyi zhing gi bkod pa kun tu ston pa zhes bya ba theg pa chen po'i mdo/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa de bzhin gshegs pa thams cad kyi byin gyi rlabs sems can la gzigs shing sangs rgyas kyi zhing gi bkod pa kun tu ston pa zhes bya ba theg pa chen po'i mdo</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa de bzhin gshegs pa thams cad kyi byin gyi rlabs sems can la gzigs shing sangs rgyas kyi zhing gi bkod pa kun tu ston pa zhes bya ba theg pa chen po'i mdo/</title>
                 <author role="translatorMain" xml:id="UT22084-046-004-1"/>
                 <author role="translatorEng" xml:id="UT22084-046-004-2">Ana Cristina Lopes</author>
+                <sponsor xml:id="UT22084-046-004-13">Aron Csondes</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.8 <date>2024</date>
+                <edition>v 0.0.12 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.h"/>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-046-004"/>
                 <date/>
             </publicationStmt>
@@ -76,6 +77,21 @@
                     <desc>2.h</desc>
                 </change>
                 <change who="#line-tofte" when="2024-02-14T13:52:36.345Z" type="text-version" status="0.0.8" xml:id="UT22084-046-004-12">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#cabie-sim" when="2024-04-29T06:22:48.214Z" type="text-version" status="0.0.9" xml:id="UT22084-046-004-14">
+                    <desc>Auto (update-sponsorship)</desc>
+                </change>
+                <change who="#cabie-sim" when="2024-04-29T15:54:09.426Z" type="text-version" status="0.0.10" xml:id="UT22084-046-004-15">
+                    <desc>Auto (update-sponsorship)</desc>
+                </change>
+                <change who="#cabie-sim" when="2024-04-29T15:55:22.936Z" type="text-version" status="0.0.11" xml:id="UT22084-046-004-16">
+                    <desc>Auto (update-sponsorship)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-12-13T14:12:35.129Z" type="translation-status" status="2.g" xml:id="UT22084-046-004-17">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2024-12-13T14:12:35.129Z" type="text-version" status="0.0.12" xml:id="UT22084-046-004-18">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
