--- a/translations/kangyur/translations/043-011_toh74-the_inquiry_of_the_girl_sumati.xml
+++ b/translations/kangyur/translations/043-011_toh74-the_inquiry_of_the_girl_sumati.xml
@@ -26,7 +26,7 @@
                 <editor role="projectEditor" xml:id="UT22084-043-011-289">Rory Lindsay</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.1 <date>2024</date>
+                <edition>v 1.0.2 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -154,6 +154,9 @@
                 <change who="#andre" when="2024-10-28T17:22:55.67Z" type="text-version" status="1.0.1" xml:id="UT22084-043-011-293">
                     <desc>Glossary integration revised, activated in CG</desc>
                 </change>
+                <change who="#konchog" when="2024-12-13T14:18:36.477Z" type="text-version" status="1.0.2" xml:id="UT22084-043-011-294">
+                    <desc>Three minor things fixed.</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
     </teiHeader>
@@ -214,7 +217,7 @@
                     <milestone unit="chunk" xml:id="UT22084-043-011-53"/>
                     <p tid="10">The Buddha responds to her questions with a series of answers in
                         prose and verse in which he outlines various sets of four dharmas, with the
-                        word dharma here implying ethical guidelines, qualities, and truths as well
+                        word <distinct>dharma</distinct> here implying ethical guidelines, qualities, and truths as well
                         as factors that contribute to one’s achievement of the stated goals of a
                         bodhisattva. This part of the sūtra is reminiscent of other sūtras featuring
                         sets of four dharmas, such as <title xml:lang="en">The Sūtra Teaching Four
@@ -397,10 +400,10 @@
                     </lg>
                     <milestone unit="chunk" xml:id="UT22084-043-011-80"/>
                     <lg tid="34">
-                        <l>“How does one become spontaneously reborn,</l>
+                        <l>“How does one become spontaneously reborn</l>
                         <l>In the presence of the King of Dharma,</l>
                         <l>Where one comes into being sitting upon</l>
-                        <l>A thousand-petalled lotus?</l>
+                        <l>A thousand-petaled lotus?</l>
                     </lg>
                     <milestone unit="chunk" xml:id="UT22084-043-011-81"/>
                     <lg tid="35">
