--- a/translations/kangyur/placeholders/035-021_toh44-21-chapter_21_pure_conduct.xml
+++ b/translations/kangyur/placeholders/035-021_toh44-21-chapter_21_pure_conduct.xml
@@ -12,11 +12,11 @@
                 <editor role="projectEditor" xml:id="UT22084-035-021-14">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.9 <date>2024</date>
+                <edition>v 0.0.10 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.e"/>
+                <availability status="2.d"/>
                 <idno xml:id="UT22084-035-021"/>
             </publicationStmt>
             <sourceDesc>
@@ -72,6 +72,12 @@
                     <desc>2.e</desc>
                 </change>
                 <change who="#line-tofte" when="2024-12-02T14:33:16.056Z" type="text-version" status="0.0.9" xml:id="UT22084-035-021-19">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-12-16T15:44:56Z" type="translation-status" status="2.d" xml:id="UT22084-035-021-20">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2024-12-16T15:44:56Z" type="text-version" status="0.0.10" xml:id="UT22084-035-021-21">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
