--- a/translations/kangyur/placeholders/081-009_toh440-the_tantra_of_mahakala.xml
+++ b/translations/kangyur/placeholders/081-009_toh440-the_tantra_of_mahakala.xml
@@ -17,12 +17,12 @@
                 <sponsor xml:id="UT22084-081-009-4">Lina Herlintje</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.14 <date>2024</date>
+                <edition>v 0.1.15 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.c"/>
+                <availability status="2.b"/>
                 <idno xml:id="UT22084-081-009"/>
                 <date/>
             </publicationStmt>
@@ -106,6 +106,12 @@
                     <desc>2.c</desc>
                 </change>
                 <change who="#line-tofte" when="2024-11-19T13:15:36.192Z" type="text-version" status="0.1.14" xml:id="UT22084-081-009-31">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-12-16T15:47:16.238Z" type="translation-status" status="2.b" xml:id="UT22084-081-009-32">
+                    <desc>2.b</desc>
+                </change>
+                <change who="#line-tofte" when="2024-12-16T15:47:16.238Z" type="text-version" status="0.1.15" xml:id="UT22084-081-009-33">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
