--- a/translations/kangyur/placeholders/091-006_toh609,925-the_incantation_that_confers_fearlessness.xml
+++ b/translations/kangyur/placeholders/091-006_toh609,925-the_incantation_that_confers_fearlessness.xml
@@ -15,11 +15,11 @@
                 <editor role="copyEditor" xml:id="UT22084-091-006-23">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.11 <date>2024</date>
+                <edition>v 0.0.12 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.c"/>
+                <availability status="2.b"/>
                 <idno xml:id="UT22084-091-006"/>
             </publicationStmt>
             <sourceDesc>
@@ -100,6 +100,12 @@
                     <desc>2.c</desc>
                 </change>
                 <change who="#line-tofte" when="2024-11-28T15:32:01.306Z" type="text-version" status="0.0.11" xml:id="UT22084-091-006-28">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-12-16T15:58:25.076Z" type="translation-status" status="2.b" xml:id="UT22084-091-006-29">
+                    <desc>2.b</desc>
+                </change>
+                <change who="#line-tofte" when="2024-12-16T15:58:25.076Z" type="text-version" status="0.0.12" xml:id="UT22084-091-006-30">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
