--- a/translations/kangyur/placeholders/096-011_toh762-the_incantation_of_lohatunda.xml
+++ b/translations/kangyur/placeholders/096-011_toh762-the_incantation_of_lohatunda.xml
@@ -15,11 +15,11 @@
                 <editor role="copyEditor" xml:id="UT22084-096-011-20">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.9 <date>2024</date>
+                <edition>v 0.0.10 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.c"/>
+                <availability status="2.b"/>
                 <idno xml:id="UT22084-096-011"/>
             </publicationStmt>
             <sourceDesc>
@@ -82,6 +82,12 @@
                     <desc>2.c</desc>
                 </change>
                 <change who="#line-tofte" when="2024-11-28T15:28:57.042Z" type="text-version" status="0.0.9" xml:id="UT22084-096-011-25">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-12-16T16:06:20.993Z" type="translation-status" status="2.b" xml:id="UT22084-096-011-26">
+                    <desc>2.b</desc>
+                </change>
+                <change who="#line-tofte" when="2024-12-16T16:06:20.993Z" type="text-version" status="0.0.10" xml:id="UT22084-096-011-27">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
